...
                text = state.dropoffPrice.format() + " - " + state.dropoffCost.format(),
            )
        }

        Row {
            Button(onClick = onReject) {
                Text("Reject")
            }
            Button(onClick = onAccept) {
                Text("Accept")
            }
        }
    }
}

