...
        )

        Button(
            onClick = onSubmit,
            enabled = state.canSubmit
        ) {
            Text(text = "Submit")
        }
    }
}

